# bnv-manager-v2

./: .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  README.md  deny.toml  docker-compose-dev.yml  docker-compose.yml  package-lock.json  renovate-config.js  renovate.json  tools.py
.github/workflows/: ci.yml  linux.yml  renovate.yml
conf_updater/: Cargo.toml  README.md
conf_updater/assets/: index.html.j2
conf_updater/src/: cli.rs  config.rs  handler.rs  main.rs  models.rs  server.rs  util.rs
conf_updater/src/handler/: mod.rs  refresh.rs  setup.rs  teardown.rs
conf_updater/src/models/: impl.rs  mod.rs  patches.rs
conf_updater/src/utils/: certbot.rs  certificates.rs  database.rs  dns.rs  mod.rs  nginx.rs  web_space.rs
conf_updater_common/: Cargo.toml  README.md
conf_updater_common/src/: lib.rs
data/conf/nginx/: bnv-manager.conf
data/conf/nginx-dev/: bnv-manager.conf
frontend/: admin.json  auth.json  club-admin.json  common.json  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/.tanstack/tmp/: cf44085b-4f128c559e3b4df8b675f665c22df0da
frontend/scripts/: gen-api.sh  run-ci.sh
frontend/src/: i18n.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx
frontend/src/api/: api.ts  api.tsx  api_admin.tsx  api_aliases.tsx  api_auth.tsx  api_club_admins.tsx  api_members.tsx  error.tsx  ws.ts  ws.tsx
frontend/src/components/: avatar.tsx  badge.tsx  button.tsx  confirm-dialog.tsx  heading-layout.tsx  link.tsx  (+5 more)
mailcow/: Cargo.toml
mailcow/src/: error.rs  lib.rs
mailcow/src/aliases/: mod.rs  schema.rs
mailcow/src/domain_admins/: mod.rs  schema.rs
mailcow/src/domains/: mod.rs  schema.rs
mailcow/src/mailboxes/: mod.rs  schema.rs
mailcow/src/status/: mod.rs  schema.rs
src/: cli.rs  config.rs  global.rs  main.rs  trace.rs
src/models/: mod.rs  session.rs  user.rs
src/modules/: ldap.rs  mod.rs
src/server/: mod.rs
webserver/: Cargo.toml
webserver/migrations/: 0001_initial.toml  0002_placeholder.toml  0003_placeholder.toml  0004_placeholder.toml
webserver/src/: cli.rs  config.rs  main.rs  migrate.rs  tracing.rs
webserver/src/galvyn_modules/: migrator.rs  mod.rs
webserver/src/global/: dns.rs  ldap.rs  mod.rs  webconf_updater.rs  ws.rs
webserver/src/http/: mod.rs  server.rs
webserver/src/http/common/: errors.rs  mod.rs  schemas.rs
webserver/src/http/common/schemas/: mod.rs
webserver/src/http/extractors/: api_json.rs  mod.rs  session_user.rs
webserver/src/http/extractors/session_account/: mod.rs  schema.rs
webserver/src/http/handler/: mod.rs
webserver/src/http/handler/accounts/: handler_admin.rs  mod.rs  schema.rs
webserver/src/http/handler/auth/: handler.rs  handler_common.rs  mod.rs  schema.rs
webserver/src/http/handler/clubs/: handler.rs  handler_admin.rs  mod.rs  schema.rs
webserver/src/http/handler/invites/: handler.rs  handler_admin.rs  handler_common.rs  mod.rs  schema.rs
webserver/src/http/handler/me/: handler.rs  handler_common.rs  mod.rs  schema.rs
webserver/src/http/handler/openapi/: handler.rs  handler_common.rs  mod.rs
webserver/src/http/handler/users/: handler.rs  handler_admin.rs  mod.rs  schema.rs
webserver/src/http/handler_auth/: mod.rs
webserver/src/http/handler_auth/auth/: mod.rs  schema.rs
webserver/src/http/handler_auth/discovery/: schema.rs
webserver/src/http/handler_auth/token/: mod.rs  schema.rs
webserver/src/http/handler_auth/userinfo/: mod.rs  schema.rs
webserver/src/http/handler_frontend/: mod.rs
webserver/src/http/handler_frontend/accounts/: handler_admin.rs  schema.rs
webserver/src/http/handler_frontend/aliases/: handler_club_admin.rs  handler_club_member.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/auth/: handler.rs  schema.rs
webserver/src/http/handler_frontend/clubs/: handler_admin.rs  handler_club_admin.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/credential_reset/: handler_common.rs
webserver/src/http/handler_frontend/domains/: handler_admin.rs  schema.rs
webserver/src/http/handler_frontend/invites/: handler_admin.rs  handler_club_admin.rs  handler_common.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/ldap/: handler.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/me/: handler_common.rs  schema.rs
webserver/src/http/handler_frontend/oidc_provider/: handler_admin.rs  schema.rs
webserver/src/http/handler_frontend/settings/: schema.rs
webserver/src/http/handler_frontend/user_invites/: handler_admin.rs  handler_club_admin.rs  handler_common.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/users/: handler.rs  handler_club_admin.rs  handler_common.rs  mod.rs  schema.rs  utils.rs
webserver/src/http/handler_frontend/websites/: handler.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/ws/: handler.rs  schema.rs
webserver/src/http/middleware/: mod.rs
webserver/src/http/middlewares/: auth_club_admin.rs  auth_required.rs  auth_superadmin.rs  mod.rs  role_required.rs
webserver/src/ldap/: mod.rs  server.rs
webserver/src/models/: account.rs  club.rs  domain.rs  invite.rs  mod.rs  role.rs  user.rs
webserver/src/models/account/: club_admin.rs  club_member.rs  db.rs  impls.rs  mod.rs
webserver/src/models/club/: db.rs  mod.rs
webserver/src/models/clubs/: mod.rs
webserver/src/models/credential_reset/: db.rs  mod.rs
webserver/src/models/domain/: db.rs  mod.rs
webserver/src/models/invite/: db.rs  impls.rs  mod.rs
webserver/src/models/mail_alias/: db.rs  mod.rs
webserver/src/models/oidc_provider/: db.rs  mod.rs
webserver/src/models/role/: db.rs  mod.rs
webserver/src/models/user/: impls.rs  mod.rs
webserver/src/models/website/: impls.rs  mod.rs
webserver/src/modules/: mod.rs
webserver/src/modules/garbage_collector/: worker.rs
webserver/src/modules/mailcow/: app_passwords.rs  mod.rs  sync.rs
webserver/src/modules/oidc/: mod.rs
webserver/src/utils/: checked_string.rs  custom_db_enum.rs  import.rs  links.rs  mod.rs  rorm.rs  swap_lock.rs  worker.rs
(+180 files in other folders)
