[package]
name = "bnv-manager-v2"
version = "0.1.0"
edition = "2021"
description = "Manager for the BNV"
license = "AGPL-3"
authors = ["Niklas Pfister <git@omikron.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webframework
axum = { version = "~0.7" }
# Session middleware
tower-sessions = { version = "~0.10" }

# CLI parser
clap = { version = "~4", features = ["derive"] }

# Serialization
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
toml = { version = "~0.8" }
url = { version = "~2", features = ["serde"] }
uuid = { version = "~1" }
time = { version = "~0.3" }

# Error handling
thiserror = { version = "~1" }

# Logging
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3" }
tracing-opentelemetry = { version = "~0.22" }
opentelemetry = { version = "~0.21" }
opentelemetry_sdk = { version = "~0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "~0.14" }
opentelemetry-semantic-conventions = { version = "~0.13" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["macros", "rt-multi-thread", "sync"] }
# Signal hook for tokio
signal-hook = { version = "~0.3" }
signal-hook-tokio = { version = "~0.3", features = ["futures-v0_3"] }
futures = { version = "~0.3" }

# rorm
rorm = { version = "~0.6", default-features = false, features = ["postgres-only", "tokio", "rustls", "cli", "uuid", "time"] }

# Ldap
ldap3 = { version = "~0.11", default-features = false, features = ["tls-rustls"] }

# HTTP client
reqwest = { version = "~0.11", features = ["rustls-tls-native-roots"] }

[features]
rorm-main = []