[package]
name = "conf_updater_common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
uuid = { version = "~1", features = ["v4","serde"] }
thiserror = { version = "~1" }

# Enabling this feature will provide the IntoResponse trait needed for Axum responses
axum = { version = "~0.7", optional = true}
